src/snapshots/types__common_log_entry.snap
---
created: "2019-02-02T19:19:52.790273Z"
creator: insta@0.6.0
source: src/types.rs
expression: "LogEntry::parse(b\"2015-05-13 17:39:16 +0200: Repaired \\'Library/Printers/Canon/IJScanner/Resources/Parameters/CNQ9601\\'\")"
---
LogEntry {
    timestamp: Some(
        Fixed(
            2015-05-13T17:39:16+02:00
        )
    ),
    message: "Repaired \'Library/Printers/Canon/IJScanner/Resources/Parameters/CNQ9601\'"
}
