src/snapshots/types__short_log_entry_extra.snap
---
created: "2019-01-22T02:16:38.102080+00:00"
creator: insta@0.4.1
expression: "LogEntry::parse(b\"Mon Nov 20 00:31:19.005 <kernel> en0: Received EAPOL packet (length = 161)\")"
source: src/types.rs
---
LogEntry {
    utc_timestamp: Some(
        2019-11-19T23:31:19Z
    ),
    message: "<kernel> en0: Received EAPOL packet (length = 161)"
}
