src/snapshots/types__unreal_log_entry.snap
---
created: "2019-01-22T02:16:38.107151+00:00"
creator: insta@0.4.1
expression: "LogEntry::parse(b\"[2018.10.29-16.56.37:542][  0]LogInit: Selected Device Profile: [WindowsNoEditor]\")"
source: src/types.rs
---
LogEntry {
    utc_timestamp: Some(
        2018-10-29T16:56:37Z
    ),
    message: "LogInit: Selected Device Profile: [WindowsNoEditor]"
}
